create develop branch

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,20 @@
         "resolveJsonModule": true,
         "isolatedModules": true,
         "noEmit": true,
-        "jsx": "react-jsx"
+        "jsx": "react-jsx",
+        "baseUrl": "./src",
+        "paths": {
+            "@components": ["./app/components/index.tsx"],
+            "@pages": ["./app/pages/index.tsx"],
+            "@utils": ["./app/utils/index.ts"],
+            "@data": ["./app/data/index.tsx"],
+            "@helpers": ["./app/helpers/index.ts"],
+            "@store": ["./app/store/index.ts"],
+            "@hooks": ["./app/hooks/index.tsx"],
+            "@interfaces": ["./app/interfaces/index.ts"],
+            "@images/*": ["./images/*"]
+        }
     },
-    "include": ["src"]
+    "include": ["src"],
+    
 }
