--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "component": "npx generate-react-cli component",
     "eject": "react-scripts eject",
     "cy": "cypress open",
     "e2e": "start-server-and-test start http-get://localhost:3000 cy",
@@ -49,11 +50,14 @@
     "stylelint-prettier": "^2.0.0"
   },
   "dependencies": {
+    "classnames": "^2.3.2",
     "mochawesome": "^7.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "^5.0.1",
+    "sass": "^1.57.1",
+    "typescript-plugin-css-modules": "^4.1.1",
     "web-vitals": "^3.0.3"
   },
   "browserslist": {
